2do Avance tareas admin(consulta inq, inm )

--- a/inicioADMIN.html
+++ b/inicioADMIN.html
@@ -37,7 +37,7 @@
             <div class="d-flex flex-wrap justify-content-end col">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="ISADMIN.php" class="nav-link link-dark px-2">Iniciar Sesión <i class="fas fa-sign-in-alt"></i></a>
+                        <a href="inicioADMIN.html" class="nav-link link-dark px-2">Iniciar Sesión <i class="fas fa-sign-in-alt"></i></a>
                     </li>
                 </ul>
             </div>
@@ -51,6 +51,7 @@
                 <div class="card-body">
                     <h3>Inquilinos</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="Adinquilinos.php" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a página</a>
                 </div>
               </div>
         </div>
@@ -60,6 +61,7 @@
                 <div class="card-body">
                     <h3>Edificios</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a página</a>
                 </div>
               </div>
         </div>
@@ -69,6 +71,7 @@
                 <div class="card-body">
                     <h3>Visitantes</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a página</a>
                 </div>
               </div>
         </div>
@@ -78,6 +81,7 @@
                 <div class="card-body">
                     <h3>Áreas Comunes</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a página</a>
                 </div>
               </div>
         </div>
@@ -87,16 +91,17 @@
                 <div class="card-body">
                     <h3>Inmuebles</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <button ></button>
+                  <a href="Inmuebles.php" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a página</a>
                 </div>
               </div>
         </div>
         <div class="div6"> 
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem; align-items: center;">
                 <img class="card-img-top" src="./img/LogoVertical.svg" alt="Card image cap">
                 <div class="card-body">
                     <h3>Consultas</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a página</a>
                 </div>
               </div>
         </div>
